--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "quiziz",
-  "version": "0.1.0",
+  "name": "MyKuiz",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.5.0",
+    "@material-ui/lab": "^4.0.0-alpha.41",
+    "@material-ui/styles": "latest",
+    "draft-js": "^0.11.4",
+    "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
+    "firebase": "^5.6.0",
+    "html-to-draftjs": "latest",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-draft-wysiwyg": "^1.14.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.1.0",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom --passWithNoTests",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
